# syster-lsp

./: CHANGELOG.md  Makefile  README.md
.cargo/: config.toml
crates/syster-lsp/: Cargo.toml  build.rs
crates/syster-lsp/src/: lib.rs  main.rs  server.rs
crates/syster-lsp/src/main/: tests.rs
crates/syster-lsp/src/server/: code_lens.rs  completion.rs  core.rs  definition.rs  diagnostics.rs  diagram.rs  document.rs  document_links.rs  document_symbols.rs  folding_ranges.rs  formatting.rs  helpers.rs  hover.rs  inlay_hints.rs  position.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  test_helpers.rs  type_definition.rs  type_info.rs  workspace_symbols.rs
crates/syster-lsp/src/server/tests/: mod.rs  test_helpers.rs  tests_code_lens.rs  tests_core_lspserver.rs  tests_document_links.rs  tests_formatting.rs  tests_helpers_format_rich_hover.rs  tests_helpers_format_symbol_declaration.rs  tests_lsp_server_state.rs  tests_server.rs
crates/syster-lsp/sysml.library/: README.md
crates/syster-lsp/tests/: test_alias_via_import.rs  test_debug_anon_return.rs  test_debug_bind.rs  test_debug_constraint.rs  test_debug_first.rs  test_debug_nested_public_import.rs  test_debug_perform.rs  test_debug_return_real.rs  test_debug_specializes.rs  test_debug_specializes_expr.rs  test_debug_transition.rs  test_debug_transitive_import.rs  test_perform_hover.rs  test_real_resolution.rs  test_temp_debug.rs  test_vehicle_example_coverage.rs  tests_integration.rs  tests_suite.rs  tests_vehicle_example.rs
crates/syster-lsp/tests/sysml-examples/: SimpleVehicleModel.sysml
(+3 files in other folders)
